--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^6.0.6",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "angular-in-memory-web-api": "^0.6.0",
     "core-js": "^2.4.1",
     "hoek": "^5.0.3",
     "rxjs": "^6.2.1",
